We fixed the spacing issue on the banner and nav. We needed to justify the buttons.

--- a/client/src/Header.css
+++ b/client/src/Header.css
@@ -1,26 +1,38 @@
+.container {
+  max-width: unset;
+  padding: 0%;
+  overflow: hidden;
+}
+
 body {
   background-color: white;
-}
-
-.container {
-  width: 100%;
-}
-
-.navbar-header {
-  color: rgb(250, 70, 22);
-  background-color: rgb(0, 33, 165);
-}
-
-.navbar {
-  overflow: auto;
-  background-color: rgb(0, 33, 165);
-  margin: 0px;
-  padding: 0px;
 }
 
 .banner {
   color: white;
   background-color: rgb(0, 33, 165);
-  margin: 0px;
-  padding: 0px;
+  max-width: unset;
+  padding: 1%;
+  margin-left: 0%;
+  margin-bottom: 0%;
+  width: 100%;
+  height: min-content;
+}
+
+.nav-item {
+  background-color: rgb(0, 33, 165);
+}
+
+a:hover {
+  color: rgb(250, 70, 22);
+  background-color: rgb(108, 154, 195);
+}
+
+.nav-link {
+  color: white;
+  background-color: rgb(0, 33, 165);
+}
+
+div {
+  margin: 0%;
 }
